# Test

./:  .env  .gitignore  Dockerfile  app.py  list-github-packages.py  list-versions.py  publish-ghcr.yaml  pyproject.toml  requirements.txt
.github/: deploy
.github/workflows/: docker-image.yml
TEST/: dockerfile
TEST/src/: main.py
myenv/: pyvenv.cfg
